<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Spinner
        android:id="@+id/add_typespinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="48dp"

        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/IE"
        app:layout_constraintEnd_toStartOf="@+id/add_typespinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/add_IEtype"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="48dp"

        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_IE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/type"
        app:layout_constraintEnd_toStartOf="@+id/add_IEtype"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="264dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_numtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/just_a_blank"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/add_num"
        app:layout_constraintTop_toBottomOf="@+id/add_IEtype" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:text="@string/Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>