<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/text_view_amount"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_amount" />

        <TextView
            android:id="@+id/text_view_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/sixsixsix"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/text_view_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_item"
            android:layout_alignParentLeft="true"
            android:text="@string/type"
            android:layout_alignParentStart="true" />



    </RelativeLayout>


</androidx.cardview.widget.CardView>